Changes in templates, rename SomeHandler to ChatHandler, add ChatTemplate

--- a/templates/Chat.html
+++ b/templates/Chat.html
@@ -1,6 +1,6 @@
 {% extends "BaseTemplate.html" %}
 
-{% block title %}Hello Tornado!{% end %}
+{% block title %}Chat!{% end %}
 
 {% block content %}
     Hello Tornado!
