Changes in webpack, added stage-0 preset, added vendor.js

--- a/templates/Chat.html
+++ b/templates/Chat.html
@@ -3,5 +3,11 @@
 {% block title %}Chat!{% end %}
 
 {% block content %}
-    Hello Tornado!
+    <div id="container">
+
+    </div>
+{% end %}
+
+{% block bottom_scripts %}
+    <script src="/static/js/build/chatPage.js"></script>
 {% end %}
