--- a/templates/BaseTemplate.html
+++ b/templates/BaseTemplate.html
@@ -5,7 +5,7 @@
     <title>{% block content %}Tornado sockets!{% end %}</title>
 
     <link href="/static/style/styles.css" rel="stylesheet" />
-    <script src="/static/js/build/commons.js"></script>
+    <script src="/static/js/build/vendor.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-default header">
@@ -21,6 +21,10 @@
             </ul>
         </div>
     </nav>
-    {% block content %}{% end %}
+    <div class="container">
+        {% block content %}{% end %}
+    </div>
+
+    {% block bottom_scripts %}{% end %}
 </body>
 </html>
