Fixes on client side, added users api

--- a/templates/BaseTemplate.html
+++ b/templates/BaseTemplate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block content %}Tornado sockets!{% end %}</title>
+    <title>{% block title %}Tornado sockets!{% end %}</title>
 
     <link href="/static/style/styles.css" rel="stylesheet" />
     <script src="/static/js/build/vendor.js"></script>
