Add css, add conversations

--- a/static/style/scss/main.scss
+++ b/static/style/scss/main.scss
@@ -5,6 +5,12 @@ ul {
   margin-top: 0;
 }
 
+.flex-center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .header {
   min-height: auto;
   padding: 10px;
