--- a/static/style/scss/main.scss
+++ b/static/style/scss/main.scss
@@ -15,3 +15,40 @@ ul {
   min-height: auto;
   padding: 10px;
 }
+
+.message, .my-message {
+  margin: 0;
+  padding: 0.5em;
+  font-size: 0.8em;
+  border-radius: 0.5em;
+}
+
+.my-message {
+  text-align: right;
+  background-color: #eaeaff;
+}
+
+.chat-container {
+  height: 100vh;
+
+  & > div {
+    height: 100vh;
+
+    .messages-container {
+      height: 40vh;
+      overflow-y: scroll;
+    }
+  }
+}
+
+.new-message-container {
+
+  textarea {
+    width: 33vw;
+    resize: none;
+  }
+
+  button {
+    margin-top: 1vh;
+  }
+}
