--- a/static/style/scss/main.scss
+++ b/static/style/scss/main.scss
@@ -29,10 +29,10 @@ ul {
 }
 
 .chat-container {
-  height: 100vh;
+  height: 80%;
 
   & > div {
-    height: 100vh;
+    height: 85vh;
 
     .messages-container {
       height: 40vh;
