--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -3006,9 +3006,9 @@ ul {
   background-color: #eaeaff; }
 
 .chat-container {
-  height: 100vh; }
+  height: 80%; }
   .chat-container > div {
-    height: 100vh; }
+    height: 85vh; }
     .chat-container > div .messages-container {
       height: 40vh;
       overflow-y: scroll; }
