--- a/templates/Login.html
+++ b/templates/Login.html
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login!</title>
-</head>
-<body>
-    <p>Hello! Enter your username please!</p>
-    {% if error %}<p>{{ error }}</p>{% end %}
-    <form action="" method="post">
-        <input type="text" name="username" placeholder="Username" />
-        <input type="password" name="password" />
-        <input type="submit" value="Enter" />
-    </form>
-</body>
-</html>
+{% extends "BaseTemplate.html" %}
+
+{% block content %}
+    <div class="col-sm-offset-4 col-sm-4">
+        <form action="" method="post">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control border-box" name="username" placeholder="Username" />
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control border-box" name="password" />
+            </div>
+
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary col-sm-12">Enter</button>
+            </div>
+        </form>
+    </div>
+{% end %}
+
