Changes in layout

--- a/templates/Chat.html
+++ b/templates/Chat.html
@@ -3,8 +3,10 @@
 {% block title %}Chat!{% end %}
 
 {% block content %}
-    <div id="container">
+    <div class="container margin-top-sm-1">
+        <div id="container">
 
+        </div>
     </div>
 {% end %}
 
