--- a/static/style/scss/main.scss
+++ b/static/style/scss/main.scss
@@ -13,6 +13,15 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.margin-bottom-sm-1 {
+  margin-bottom: 10vh;
+}
+
+.margin-top-sm-1 {
+  margin-top: 5vh;
 }
 
 /*.flex-center {
