--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -2992,7 +2992,14 @@ body {
 .center-content {
   height: 100vh;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center; }
+
+.margin-bottom-sm-1 {
+  margin-bottom: 10vh; }
+
+.margin-top-sm-1 {
+  margin-top: 5vh; }
 
 /*.flex-center {
   display: flex;
