--- a/templates/Login.html
+++ b/templates/Login.html
@@ -1,22 +1,24 @@
 {% extends "BaseTemplate.html" %}
 
 {% block content %}
-    <div class="col-sm-offset-4 col-sm-4">
-        <form action="" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control border-box" name="username" placeholder="Username" />
-            </div>
+    <div class="container center-content">
+        <div class="col-sm-4 margin-bottom-sm-1">
+            <form action="" method="post">
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control border-box" name="username" placeholder="Username" />
+                </div>
 
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control border-box" name="password" />
-            </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control border-box" name="password" />
+                </div>
 
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary col-sm-12">Enter</button>
-            </div>
-        </form>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary col-sm-12">Enter</button>
+                </div>
+            </form>
+        </div>
     </div>
 {% end %}
 
