--- a/templates/Registration.html
+++ b/templates/Registration.html
@@ -1,32 +1,34 @@
 {% extends "BaseTemplate.html" %}
 
 {% block content %}
-    <div class="center-content col-sm-offset-4 col-sm-4">
-        <form action="" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control border-box" name="username" placeholder="Username" />
-            </div>
+    <div class="container center-content">
+        <div class="col-sm-4 margin-bottom-sm-1">
+            <form action="" method="post">
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control border-box" name="username" placeholder="Username" />
+                </div>
 
-            <div class="form-group">
-                <label for="email">E-mail:</label>
-                <input type="email" class="form-control border-box" name="email" placeholder="E-mail" />
-            </div>
+                <div class="form-group">
+                    <label for="email">E-mail:</label>
+                    <input type="email" class="form-control border-box" name="email" placeholder="E-mail" />
+                </div>
 
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control border-box" name="password" />
-            </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control border-box" name="password" />
+                </div>
 
-            <div class="form-group">
-                <label for="repeat-password">Repeat password:</label>
-                <input type="password" class="form-control border-box" name="confirm-password" />
-            </div>
+                <div class="form-group">
+                    <label for="repeat-password">Repeat password:</label>
+                    <input type="password" class="form-control border-box" name="confirm-password" />
+                </div>
 
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary col-sm-12">Enter</button>
-            </div>
-        </form>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary col-sm-12">Enter</button>
+                </div>
+            </form>
+        </div>
     </div>
 {% end %}
 
