--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -2995,6 +2995,9 @@ body {
   justify-content: center;
   align-items: center; }
 
+.disable-float {
+  float: none; }
+
 .margin-bottom-sm-1 {
   margin-bottom: 10vh; }
 
