--- a/templates/Registration.html
+++ b/templates/Registration.html
@@ -25,7 +25,11 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary col-sm-12">Enter</button>
+                    <button type="submit" class="btn btn-primary col-sm-12 disable-float">Register</button>
+                </div>
+
+                <div class="form-group">
+                    <a href="/github-oauth"><button type="button" class="btn btn-primary col-sm-12">Login with GitHub <i class="fa fa-github-alt" aria-hidden="true"></i></button></a>
                 </div>
             </form>
         </div>
