--- a/templates/Profile.html
+++ b/templates/Profile.html
@@ -3,8 +3,7 @@
 {% block title %}Profile!{% end %}
 
 {% block content %}
-
-    <div id="container">
+    <div class="container padding-top-sm-1">
         {{ user['username'] }}
     </div>
 {% end %}
