Add searching users

--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -3225,6 +3225,9 @@ ul {
 body {
   height: 100vh; }
 
+.align-middle {
+  vertical-align: middle !important; }
+
 .center-content {
   height: 100vh;
   display: flex;
