--- a/static/style/scss/main.scss
+++ b/static/style/scss/main.scss
@@ -10,6 +10,10 @@ body {
   height: 100vh;
 }
 
+.align-middle {
+  vertical-align: middle !important;
+}
+
 .center-content {
   height: 100vh;
   display: flex;
