--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -3267,6 +3267,10 @@ body {
     .users-preview-list li:hover {
       background-color: #9b9b9b; }
 
+.errors-container {
+  min-height: 0;
+  transition: min-height 500ms ease-out 0.5s; }
+
 /*.flex-center {
   display: flex;
   justify-content: space-between;
